# OpenGL_CPP

./: .gitignore  CMakeLists.txt  Setup.md
01_Create_Window/: CMakeLists.txt
01_Create_Window/src/: main.cpp
02_Create_Triangle/: CMakeLists.txt  main.cpp
03_SetUp_GLEW/: CMakeLists.txt  main.cpp
04_Vertex_Buffers_N_Drawing_Triangle/: CMakeLists.txt  main.cpp
05_Vertex_Attributes_N_Layouts/: CMakeLists.txt  main.cpp
06_Shader/: CMakeLists.txt  main.cpp
07_Shader_Files/: CMakeLists.txt  main.cpp
07_Shader_Files/res/shaders/: Basic.shader
08_Index_Buffers/: CMakeLists.txt  main.cpp
09_Dealing_with_Errors/: CMakeLists.txt  main.cpp
10_Uniforms/: CMakeLists.txt  main.cpp
10_Uniforms/res/shaders/: Basic.shader
